# bug-game

./: CMakeLists.txt  README.md  build.sh
application/: application.cpp
core/: main.cpp
core/backend/: backend.cpp  backend.hpp  glfw_integration.cpp  glfw_integration.hpp
core/common/: animation.hpp  enums.hpp  object.hpp
core/editor/: editor.cpp
core/libs/: molson.h
core/renderer/: renderer.cpp  renderer.hpp
core/renderer/objects/: quad_renderer.hpp
core/res/: resource_manager.cpp
core/res/shaders/: single_colour.frag
core/utils/: log.cpp  resource_manager.cpp  resource_manager.hpp  singleton.hpp
